Mostrar imágenes, manejo básico de excepciones